kubernetes/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyectofinal
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proyectofinal
  template:
    metadata:
      labels:
        app: proyectofinal
    spec:
      serviceAccountName: default
      containers:
      - name: acrplopez
        image: acrplopez.azurecr.io/app-plopez:1.0
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
      imagePullSecrets:
      - name: regcred
