kubernetes/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proyectofinal-service
  namespace: ns-plopez
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: proyectofinal
