kubernetes/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyectofinal-ingress
  namespace: ns-plopez
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /plopez
        pathType: Prefix
        backend:
          service:
            name: proyectofinal-service
            port:
              number: 80
